Fix project title wrapping

--- a/src/stylesheets/module/_project.scss
+++ b/src/stylesheets/module/_project.scss
@@ -116,6 +116,8 @@
 }
 
 .project-title {
+    white-space: nowrap;
+
     svg {
         transition: .5s stroke cubic-bezier(0.645, 0.045, 0.355, 1);
         &:hover {
